# ZENITH-AI

./: .gitignore  CONTRIBUTING.es.md  CONTRIBUTING.md  LICENSE  LICENSE.es.md  README.es.md  README.md  SPONSORS.es.md  SPONSORS.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt  zenith.modelfile
.github/: FUNDING.yml
docs/: architecture.md  installation.md
docs/es/: instalacion.md
zenith/: brain.py  cli.py  memory.py
zenith_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
